# JornadaDeDados

./: README.md  pyproject.toml
BootCampGit/: bug.py
BootCampPowerBi/dataset/: Clientes.csv  Produtos.xlsx  Vendedores.csv
BootCampPython/: challenge1.py  challenge2.py  challenge3.py  employees.json
BootCampPython/aula6-10/: desafio.py  vendas.csv
RegexClass/: .gitignore  pyproject.toml
RegexClass/src/: table_pdf_extractor.py
RegexClass/src/configs/rules/: notas.py
